20 July 2009
[Sarah Frisk <ssfrisk@gmail.com> ]
	-Started setting up visually the word list editor
	-Some issues with loading images and making them appear.  Attempting to fix this.

14 July 2009(svn.debian.org/tux4kids - revision 1208)
[Sarah Frisk <ssfrisk@gmail.com> ]
	- made it so you can't edit the first word in a wordlist, since this is the title.
	- fixed a few bugs.

13 July 2009 (svn.debian.org/tux4kids - revision 1191)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-changed the names of the word*.png files to fit the list*.png conventions 
	titlescreen.c was looking for.  Menu icon now appears in-game.

12 July 2009 (svn.debian.org/tux4kids - revision 1184)
[Sarah Frisk <ssfrisk@gmail.com> ]
	-fixed bug where deleting all the words in a word list causes the program to
	crash.  Instead, you can delete all but one word, which shall remain.

11 July 2009 (svn.debian.org/tux4kids - revision 1183
[Sarah Frisk <ssfrisk@gmail.com> ]
	- added icons for word list editor and placed them in data/images/menu.  Still
	need to implement them.

6 July 2009 (svn.debian.org/tux4kids - revision 1147)
[ Sarah Frisk <ssfrisk@gmail.com> ]
	- Fixed spacing issue in ChooseWord()
	- Fixed random garbage adding in ChooseWord()
	- Simplified ChooseWord() in general
	- For the most part ChooseWord() functionality is finished.  What is left is to had a 
	more comprehensible GUI than what is currently there (which involves figuring out how to 
	move the wordlist editor from the top left hand corner of the screen).  Also need to make 
	is so ChooseFile() can create wordlists, but that should be easy since the set up of that 
	function is very similar to ChooseWord(). 

30 Jun 2009 (svn.debian.org/tux4kids - revision 1119)
[ David Bruce <davidstuartbruce@gmail.com> ]
        - Build - changed file permissions on installed localstatedir and sysconfdir
	          from 755 to 777 so they will be user-writable.

June 2009(svn.debian.org/tux4kids - previous revisions to 1116)